# SME-SIGLA-SDK-Microsservico

./: .dockerfile  .gitignore  README.md  pyproject.toml
src/sigla_sdk/: __init__.py  context.py
src/sigla_sdk/django/: middlewares.py
src/sigla_sdk/http/: api_client.py
src/sigla_sdk/logging/: json_formatter.py
src/sigla_sdk/middlewares/: __init__.py  audit_log_jwt.py  correlation_id.py
